# absolo-cloud-services

./: .env.example  .gitattributes  .gitignore  .prettierrc.json  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json  update-swagger.sh
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/: CODEOWNERS  README.md  pull_request_template.md  renovate.json
.github/workflows/: README.md  ci.yml
apps/admin/: README.md  index.html  package.json  tailwind.config.mjs  tsconfig.json  vite.config.ts
apps/admin/src/: main.tsx  router.tsx
apps/admin/src/components/: admin-shell.tsx
apps/admin/src/lib/: api.ts
apps/admin/src/pages/: abuse.tsx  audit.tsx  enterprise.tsx  finance.tsx  fleet.tsx  orgs.tsx  overview.tsx
apps/dashboard/: .env.example  README.md  index.html  package.json  vite.config.ts
apps/dashboard/src/: main.tsx  router.tsx  styles.css
apps/dashboard/src/components/: app-shell.tsx  bindings-panel.tsx  config-editor.tsx  terminal.tsx  volumes-ui.tsx
apps/dashboard/src/lib/: api.ts  query-client.ts
apps/dashboard/src/pages/: api-keys.tsx  billing.tsx  databases.tsx  infrastructure.tsx  project-detail.tsx  projects-list.tsx  settings.tsx  sign-in.tsx  storage.tsx  team.tsx
apps/marketing/: README.md  next.config.mjs  package.json  tailwind.config.mjs  tsconfig.json
apps/marketing/src/app/: globals.css  layout.tsx  (+1 more)
apps/status/: README.md  package.json
crates/builder-worker/: Cargo.toml  README.md
crates/builder-worker/src/: builder.rs  main.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: config.rs  main.rs
crates/cli/src/commands/: apps.rs  auth.rs
crates/edge-proxy/: Cargo.toml  README.md
crates/edge-proxy/src/: main.rs
crates/host-agent/: Cargo.toml  README.md
crates/host-agent/src/: main.rs
crates/log-shipper/: Cargo.toml  README.md
crates/log-shipper/src/: main.rs
crates/metering-aggregator/: Cargo.toml  README.md
crates/metering-aggregator/src/: main.rs
crates/shared/: Cargo.toml  README.md
crates/shared/src/: lib.rs
crates/web-ssh-gateway/: Cargo.toml  README.md
crates/web-ssh-gateway/src/: main.rs
docs/: PROGRESS.md
docs/architecture/: README.md
docs/contributing/: README.md
docs/plans/: 00-master-plan-d1e00e.md  01-marketing-website-d1e00e.md  02-customer-dashboard-d1e00e.md  03-admin-dashboard-d1e00e.md  04-design-system-d1e00e.md  05-control-plane-architecture-d1e00e.md  06-iam-auth-service-d1e00e.md  07-billing-service-d1e00e.md  08-projects-apps-service-d1e00e.md  09-orchestrator-service-d1e00e.md  10-host-agent-rust-d1e00e.md  11-edge-proxy-rust-d1e00e.md  12-builder-service-d1e00e.md  13-templates-catalog-d1e00e.md  14-managed-databases-d1e00e.md  15-object-storage-s3-d1e00e.md  16-dns-subdomain-service-d1e00e.md  17-custom-domains-ssl-d1e00e.md  18-logs-aggregation-d1e00e.md  19-metrics-monitoring-d1e00e.md  20-web-ssh-shell-d1e00e.md  21-snapshots-backups-d1e00e.md  22-versioning-rollback-d1e00e.md  23-multi-region-networking-d1e00e.md  24-host-onboarding-fleet-d1e00e.md  25-security-hardening-d1e00e.md  26-secrets-management-d1e00e.md  27-events-eventbus-d1e00e.md  28-data-model-postgres-d1e00e.md  29-api-design-contracts-d1e00e.md  30-testing-ci-cd-d1e00e.md  31-observability-incident-d1e00e.md  32-compliance-legal-d1e00e.md  33-pricing-packaging-d1e00e.md  34-developer-experience-cli-d1e00e.md  35-roadmap-phases-d1e00e.md  36-revision-proposal-2026-04-30-d1e00e.md  37-infrastructure-as-code-d1e00e.md  38-platform-self-deployment-d1e00e.md  39-enterprise-byo-infra-d1e00e.md  (+2 more)
docs/runbooks/: README.md
infra/: README.md  vmagent.yml
infra/argocd/: README.md
infra/argocd/apps/: README.md
infra/argocd/bootstrap/: README.md  apps.yaml
infra/argocd/image-updater/: README.md
infra/argocd/projects/: README.md
infra/helm/: README.md
infra/packer/: README.md
infra/packer/absolo-host-base/: README.md  absolo-base.pkr.hcl
infra/postgres/init/: 01-schemas.sql
infra/runbooks/: README.md  k3d-local-cluster.sh
infra/tofu/: README.md
infra/tofu/modules/: README.md
infra/tofu/stacks/: README.md
services/control-plane/: .env.example  .swcrc  README.md  drizzle.config.ts  package.json  test-k8s.ts  tsconfig.build.json  tsconfig.json  vitest.config.ts
services/control-plane/drizzle/: 0000_public_thundra.sql  0001_adorable_onslaught.sql  0002_omniscient_ted_forrester.sql  0003_zippy_shatterstar.sql
services/control-plane/scripts/: seed.ts  test-enterprise.ts
services/control-plane/src/: app.module.ts  main.ts
services/control-plane/test/: app-config.test.ts  auth.test.ts
templates/: README.md
templates/ghost/: Dockerfile  README.md  template.yaml
templates/laravel/: Dockerfile  README.md  template.yaml
templates/nextjs/: Dockerfile  README.md  template.yaml
templates/nodejs-express/: Dockerfile  README.md  template.yaml
templates/python-fastapi/: README.md  template.yaml
templates/static-site/: README.md  template.yaml
templates/woocommerce/: Dockerfile  README.md  template.yaml
templates/wordpress/: Dockerfile  README.md  template.yaml
tools/: README.md
tools/scripts/: README.md  check-visibility.mjs
(+95 files in other folders)
