[package]
name = "absolo-builder-worker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
absolo-shared = { path = "../shared" }
async-nats = "0.33"
futures.workspace = true
