[package]
name = "absolo-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
tracing.workspace = true
absolo-shared = { path = "../shared" }
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["json", "rustls-tls"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
console = "0.15.8"
dialoguer = "0.11.0"
