[package]
name = "absolo-edge-proxy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1"
absolo-shared = { path = "../shared" }
hyper-util = "0.1.3"
tower = "0.4"
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
reqwest = { version = "0.12.4", features = ["json", "rustls-tls"] }
tracing-subscriber = "0.3"
axum = "0.8.0"
hyper = "1.5.1"
async-nats = "0.47.0"
tokio-stream = "0.1.18"
serde.workspace = true
serde_json.workspace = true
