[package]
name = "absolo-log-shipper"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
tracing.workspace = true
absolo-shared = { path = "../shared" }
async-nats = "0.33.0"
futures-util = "0.3"
tracing-subscriber = "0.3"
axum.workspace = true
tokio-stream = "0.1.18"
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
