[package]
name = "absolo-metering-aggregator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
tracing.workspace = true
absolo-shared = { path = "../shared" }
async-nats = "0.33.0"
tracing-subscriber = "0.3"
futures-util = "0.3"
