[package]
name = "absolo-web-ssh-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
axum-core.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
absolo-shared = { path = "../shared" }
