[package]
name = "absolo-web-ssh-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
axum-core.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
absolo-shared = { path = "../shared" }
kube = { version = "3.1.0", features = ["ws"] }
k8s-openapi = { version = "0.27.1", features = ["v1_31"] }
jsonwebtoken = "10.3.0"
futures-util = "0.3.32"
futures.workspace = true
